add encrpt api
